--- a/style.css
+++ b/style.css
@@ -4,10 +4,20 @@ body
     background-size: 1435px;
 }
 
-	.login_div1 , .login_div2
-	{
+.login_div1 , .login_div2
+{
 		background: white;
 		padding: 10px;
 		float: none;
 		border-radius: 15px;
-	}
+}
+
+#problem
+{
+	width: 60%;
+}
+
+#game_body{
+	background-image: url(maxresdefault.jpg);
+    background-size: 1435px;
+}
