--- a/style.css
+++ b/style.css
@@ -21,3 +21,12 @@ body
 	background-image: url(maxresdefault.jpg);
     background-size: 1435px;
 }
+
+#output{
+	background-color: white;
+	border-radius: 10px;
+	border-top: 10px solid #6d3da1;
+	padding: 10px;
+	float:none;
+	text-align: left;
+}
